# ethsign

./: .travis.yml  Cargo.toml  README.md  test.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  rust.yml
ethsign-crypto/: Cargo.toml
ethsign-crypto/src/: aes.rs  error.rs  lib.rs  scrypt.rs
examples/: sign.rs
res/: wallet.json
src/: ec.rs  error.rs  key.rs  keyfile.rs  lib.rs  protected.rs
