[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "A library to read JSON keyfiles and sign Ethereum stuff."
documentation = "https://docs.rs/crate/ethsign"
edition = "2018"
homepage = "https://github.com/tomusdrw/ethsign"
license = "GPL-3.0"
name = "ethsign"
repository = "https://github.com/tomusdrw/ethsign"
version = "0.10.0"

[dependencies]
zeroize = "1.0.0"
rand = "0.8.0"
rustc-hex = "2.0.1"
secp256k1 = { version = "0.28", optional = true, features = ["recovery"] }
serde = { version = "1.0", features = ["derive"]}

# Libraries for for pure-rust crypto
libsecp256k1 = { package="libsecp256k1", version = "0.7.0", optional = true }
ethsign-crypto = { version = "0.3", path = "./ethsign-crypto" }

[dev-dependencies]
serde_json = "1.0"
hex = "0.4"

[features]
default = ["secp256k1"]
pure-rust = ["libsecp256k1"]
export-private-key = []

[workspace]
members = [
    "ethsign-crypto"
]
